--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Starex</title>
-  <base href="/">
+  <title>Emerging Private University in Gurgaon, Delhi NCR | Starex University</title>
+  <meta name="description" content="With the world-class environment, the emerging University in Gurgaon, Delhi NCR, Haryana-Starex University offers a top-notch education in India. ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
