--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <title>Emerging Private University in Gurgaon, Delhi NCR | Starex University</title>
   <meta name="description" content="With the world-class environment, the emerging University in Gurgaon, Delhi NCR, Haryana-Starex University offers a top-notch education in India. ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/logo/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> -->
+<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
 </head>
 <body class="mat-typography">
   <app-root></app-root>
